@@ -1,23 +1,10 @@
 /*
- *  Copyright 2018-2024 the original author or authors.
- *
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
- *
- *       https://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- *
+ * Copyright (c) 2021. Leafage All Right Reserved.
  */
-
 package io.leafage.basic.hypervisor.controller;
 
-import io.leafage.basic.hypervisor.domain.RoleMembers;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.leafage.basic.hypervisor.domain.RolePrivileges;
 import io.leafage.basic.hypervisor.dto.RoleDTO;
 import io.leafage.basic.hypervisor.service.RoleMembersService;
@@ -29,199 +16,235 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.reactive.WebFluxTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
-import org.springframework.test.web.reactive.server.WebTestClient;
-import reactor.core.publisher.Mono;
+import org.springframework.test.web.servlet.MockMvc;
+import top.leafage.common.TreeNode;
 
-import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.doThrow;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
- * role接口测试类
+ * role controller test
  *
- * @author liwenqiang 2021-06-19 10:00
- */
+ * @author liwenqiang 2019/9/14 21:52
+ **/
+@WithMockUser
 @ExtendWith(SpringExtension.class)
-@WebFluxTest(RoleController.class)
+@WebMvcTest(RoleController.class)
 class RoleControllerTest {
 
     @Autowired
-    private WebTestClient webTestClient;
+    private MockMvc mvc;
 
-    @MockBean
-    private RoleMembersService roleMembersService;
+    @Autowired
+    private ObjectMapper mapper;
 
     @MockBean
     private RoleService roleService;
 
     @MockBean
+    private RoleMembersService roleMembersService;
+
+    @MockBean
     private RolePrivilegesService rolePrivilegesService;
 
-    private RoleDTO roleDTO;
     private RoleVO roleVO;
-    private RolePrivileges rolePrivileges;
-    private RoleMembers roleMembers;
+
+    private RoleDTO roleDTO;
 
     @BeforeEach
     void init() {
+        roleVO = new RoleVO();
+        roleVO.setName("test");
+        roleVO.setSuperior("superior");
+        roleVO.setDescription("description");
+
         roleDTO = new RoleDTO();
         roleDTO.setName("test");
         roleDTO.setSuperiorId(1L);
-        roleDTO.setName("role");
-
-        roleVO = new RoleVO();
-        roleVO.setName("test");
-        roleVO.setLastModifiedDate(Instant.now());
-        roleVO.setDescription("role");
-
-        rolePrivileges = new RolePrivileges();
-        rolePrivileges.setRoleId(1L);
-        rolePrivileges.setPrivilegeId(1L);
-
-        roleMembers = new RoleMembers();
-        roleMembers.setRoleId(1L);
-        roleMembers.setUsername("test");
+        roleDTO.setAuthorities(Set.of("test"));
+        roleDTO.setDescription("description");
     }
 
     @Test
-    void retrieve() {
+    void retrieve() throws Exception {
         Pageable pageable = PageRequest.of(0, 2);
-        Page<RoleVO> voPage = new PageImpl<>(List.of(roleVO), pageable, 1L);
-        given(this.roleService.retrieve(0, 2)).willReturn(Mono.just(voPage));
+        Page<RoleVO> voPage = new PageImpl<>(List.of(roleVO), pageable, 2L);
+        given(this.roleService.retrieve(Mockito.anyInt(), Mockito.anyInt(), Mockito.anyString())).willReturn(voPage);
 
-        webTestClient.get().uri(uriBuilder -> uriBuilder.path("/roles").queryParam("page", 0)
-                        .queryParam("size", 2).build()).exchange()
-                .expectStatus().isOk().expectBodyList(RoleVO.class);
+        mvc.perform(get("/roles").queryParam("page", "0").queryParam("size", "2")
+                        .queryParam("sort", "")).andExpect(status().isOk())
+                .andExpect(jsonPath("$.content").isNotEmpty()).andDo(print()).andReturn();
     }
 
     @Test
-    void retrieve_error() {
-        given(this.roleService.retrieve(0, 2)).willThrow(new RuntimeException());
+    void retrieve_error() throws Exception {
+        given(this.roleService.retrieve(Mockito.anyInt(), Mockito.anyInt(), Mockito.anyString())).willThrow(new RuntimeException());
 
-        webTestClient.get().uri(uriBuilder -> uriBuilder.path("/roles").queryParam("page", 0)
-                .queryParam("size", 2).build()).exchange().expectStatus().isNoContent();
+        mvc.perform(get("/roles").queryParam("page", "0").queryParam("size", "2")
+                .queryParam("sort", "")).andExpect(status().isNoContent()).andDo(print()).andReturn();
     }
 
     @Test
-    void fetch() {
-        given(this.roleService.fetch(Mockito.anyLong())).willReturn(Mono.just(roleVO));
+    void fetch() throws Exception {
+        given(this.roleService.fetch(Mockito.anyLong())).willReturn(roleVO);
 
-        webTestClient.get().uri("/roles/{id}", 1L).exchange()
-                .expectStatus().isOk().expectBody().jsonPath("$.name").isEqualTo("test");
+        mvc.perform(get("/roles/{id}", Mockito.anyLong())).andExpect(status().isOk())
+                .andExpect(jsonPath("$.name").value("test")).andDo(print()).andReturn();
     }
 
     @Test
-    void fetch_error() {
+    void fetch_error() throws Exception {
         given(this.roleService.fetch(Mockito.anyLong())).willThrow(new RuntimeException());
 
-        webTestClient.get().uri("/roles/{id}", 1L).exchange().expectStatus().isNoContent();
+        mvc.perform(get("/roles/{id}", Mockito.anyLong())).andExpect(status().isNoContent())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void exist() {
-        given(this.roleService.exist(Mockito.anyString())).willReturn(Mono.just(Boolean.TRUE));
+    void create() throws Exception {
+        given(this.roleService.create(Mockito.any(RoleDTO.class))).willReturn(roleVO);
 
-        webTestClient.get().uri(uriBuilder -> uriBuilder.path("/roles/exist")
-                .queryParam("name", "test").build()).exchange().expectStatus().isOk();
+        mvc.perform(post("/roles").contentType(MediaType.APPLICATION_JSON)
+                        .content(mapper.writeValueAsString(roleDTO)).with(csrf().asHeader())).andExpect(status().isCreated())
+                .andExpect(jsonPath("$.name").value("test"))
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void exist_error() {
-        given(this.roleService.exist(Mockito.anyString())).willThrow(new RuntimeException());
-
-        webTestClient.get().uri(uriBuilder -> uriBuilder.path("/roles/exist")
-                .queryParam("name", "test").build()).exchange().expectStatus().isNoContent();
-    }
-
-    @Test
-    void create() {
-        given(this.roleService.create(Mockito.any(RoleDTO.class))).willReturn(Mono.just(roleVO));
-
-        webTestClient.post().uri("/roles").bodyValue(roleDTO).exchange().expectStatus().isCreated()
-                .expectBody().jsonPath("$.name").isEqualTo("test");
-    }
-
-    @Test
-    void create_error() {
+    void create_error() throws Exception {
         given(this.roleService.create(Mockito.any(RoleDTO.class))).willThrow(new RuntimeException());
 
-        webTestClient.post().uri("/roles").bodyValue(roleDTO).exchange().expectStatus().is4xxClientError();
+        mvc.perform(post("/roles").contentType(MediaType.APPLICATION_JSON)
+                        .content(mapper.writeValueAsString(roleDTO)).with(csrf().asHeader()))
+                .andExpect(status().isExpectationFailed())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void modify() {
-        given(this.roleService.modify(Mockito.anyLong(), Mockito.any(RoleDTO.class))).willReturn(Mono.just(roleVO));
+    void modify() throws Exception {
+        given(this.roleService.modify(Mockito.anyLong(), Mockito.any(RoleDTO.class))).willReturn(roleVO);
 
-        webTestClient.put().uri("/roles/{id}", 1L).bodyValue(roleDTO).exchange()
-                .expectStatus().isAccepted()
-                .expectBody().jsonPath("$.name").isEqualTo("test");
+        mvc.perform(put("/roles/{id}", 1L).contentType(MediaType.APPLICATION_JSON)
+                        .content(mapper.writeValueAsString(roleDTO)).with(csrf().asHeader()))
+                .andExpect(status().isAccepted())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void modify_error() {
+    void modify_error() throws Exception {
         given(this.roleService.modify(Mockito.anyLong(), Mockito.any(RoleDTO.class))).willThrow(new RuntimeException());
 
-        webTestClient.put().uri("/roles/{id}", 1L).bodyValue(roleDTO).exchange()
-                .expectStatus().isNotModified();
+        mvc.perform(put("/roles/{id}", Mockito.anyLong()).contentType(MediaType.APPLICATION_JSON)
+                        .content(mapper.writeValueAsString(roleDTO)).with(csrf().asHeader()))
+                .andExpect(status().isNotModified())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void members() {
-        given(this.roleMembersService.members(Mockito.anyLong())).willReturn(Mono.just(List.of(roleMembers)));
+    void remove() throws Exception {
+        this.roleService.remove(Mockito.anyLong());
 
-        webTestClient.get().uri("/roles/{id}/members", 1L).exchange()
-                .expectStatus().isOk()
-                .expectBodyList(RoleMembers.class);
+        mvc.perform(delete("/roles/{id}", Mockito.anyLong()).with(csrf().asHeader())).andExpect(status().isOk())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void members_error() {
-        given(this.roleMembersService.members(Mockito.anyLong())).willThrow(new RuntimeException());
+    void remove_error() throws Exception {
+        doThrow(new RuntimeException()).when(this.roleService).remove(Mockito.anyLong());
 
-        webTestClient.get().uri("/roles/{id}/members", 1L).exchange().expectStatus().isNoContent();
+        mvc.perform(delete("/roles/{id}", Mockito.anyLong()).with(csrf().asHeader()))
+                .andExpect(status().isExpectationFailed())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void privileges() {
-        given(this.rolePrivilegesService.privileges(Mockito.anyLong())).willReturn(Mono.just(List.of(rolePrivileges)));
+    void members() throws Exception {
+        given(this.roleMembersService.members(Mockito.anyLong())).willReturn(Mockito.anyList());
 
-        webTestClient.get().uri("/roles/{id}/privileges", 1L).exchange()
-                .expectStatus().isOk()
-                .expectBodyList(RolePrivileges.class);
+        mvc.perform(get("/roles/{id}/members", 1L)).andExpect(status().isOk())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void privileges_error() {
-        given(this.rolePrivilegesService.privileges(Mockito.anyLong())).willThrow(new RuntimeException());
+    void members_error() throws Exception {
+        doThrow(new RuntimeException()).when(this.roleMembersService).members(Mockito.anyLong());
 
-        webTestClient.get().uri("/roles/{id}/privileges", 1L).exchange().expectStatus().isNoContent();
+        mvc.perform(get("/roles/{id}/members", Mockito.anyLong())).andExpect(status().isNoContent())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void relation() {
+    void privileges() throws Exception {
+        given(this.rolePrivilegesService.privileges(Mockito.anyLong())).willReturn(Mockito.anyList());
+
+        mvc.perform(get("/roles/{id}/privileges", 1L)).andExpect(status().isOk())
+                .andDo(print()).andReturn();
+    }
+
+    @Test
+    void authorities_error() throws Exception {
+        doThrow(new RuntimeException()).when(this.rolePrivilegesService).privileges(Mockito.anyLong());
+
+        mvc.perform(get("/roles/{id}/privileges", Mockito.anyLong())).andExpect(status().isNoContent())
+                .andDo(print()).andReturn();
+    }
+
+    @Test
+    void relation() throws Exception {
         given(this.rolePrivilegesService.relation(Mockito.anyLong(), Mockito.anySet()))
-                .willReturn(Mono.just(Boolean.TRUE));
+                .willReturn(List.of(Mockito.mock(RolePrivileges.class)));
 
-        webTestClient.patch().uri("/roles/{id}/privileges", 1L)
-                .bodyValue(Collections.singleton(1L))
-                .exchange().expectStatus().isAccepted();
+        mvc.perform(patch("/roles/{id}/privileges", 1L)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(mapper.writeValueAsString(Set.of(1L))).with(csrf().asHeader()))
+                .andExpect(status().isAccepted())
+                .andDo(print()).andReturn();
     }
 
     @Test
-    void relation_error() {
-        given(this.rolePrivilegesService.relation(Mockito.anyLong(), Mockito.anySet())).willThrow(new RuntimeException());
+    void relation_error() throws Exception {
+        doThrow(new RuntimeException()).when(this.rolePrivilegesService).relation(Mockito.anyLong(), Mockito.anySet());
 
-        webTestClient.patch().uri("/roles/{id}/privileges", 1L)
-                .bodyValue(Collections.singleton(1L))
-                .exchange().expectStatus().is4xxClientError();
+        mvc.perform(patch("/roles/{id}/privileges", Mockito.anyLong()).contentType(MediaType.APPLICATION_JSON)
+                        .content(mapper.writeValueAsString(Set.of(1L))).with(csrf().asHeader()))
+                .andExpect(status().isExpectationFailed())
+                .andDo(print()).andReturn();
     }
+
+
+    @Test
+    void tree() throws Exception {
+        TreeNode treeNode = new TreeNode(1L, "test");
+        given(this.roleService.tree()).willReturn(Collections.singletonList(treeNode));
+
+        mvc.perform(get("/roles/tree")).andExpect(status().isOk())
+                .andDo(print()).andReturn();
+    }
+
+    @Test
+    void tree_error() throws Exception {
+        given(this.roleService.tree()).willThrow(new RuntimeException());
+
+        mvc.perform(get("/roles/tree")).andExpect(status().isNoContent())
+                .andDo(print()).andReturn();
+    }
+
 }
